--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ margin: 5px;
 
 .container{
   margin-top: 20px;
+  box-shadow: 5px 5px 53px
 }
 
 .row{
@@ -34,7 +35,7 @@ body{
 }
 
 h1{
-  margin-left: 5px;
+  margin: auto;
 }
 
 h4{
